src/notation/modulation/parser/generated-modulation-parser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/



  // Canonical source: src/shared/pitch.js
  // This inline copy is required because Peggy cannot import JS modules.
  const PITCH_CLASS_VALUES = {
    "C": 0,
    "C#": 1, "Db": 1,
    "D": 2,
    "D#": 3, "Eb": 3,
    "E": 4,
    "F": 5,
    "F#": 6, "Gb": 6,
    "G": 7,
    "G#": 8, "Ab": 8,
    "A": 9,
    "A#": 10, "Bb": 10,
    "B": 11,
  };

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    start: peg$parsestart,
  };
  let peg$startRuleFunction = peg$parsestart;

  const peg$c0 = "-";
  const peg$c1 = "C#";
  const peg$c2 = "Db";
  const peg$c3 = "D#";
  const peg$c4 = "Eb";
  const peg$c5 = "F#";
  const peg$c6 = "Gb";
  const peg$c7 = "G#";
  const peg$c8 = "Ab";
  const peg$c9 = "A#";
  const peg$c10 = "Bb";
  const peg$c11 = "|";
  const peg$c12 = "=";
  const peg$c13 = "+=";
  const peg$c14 = "velocity";
  const peg$c15 = "timing";
  const peg$c16 = "duration";
  const peg$c17 = "probability";
  const peg$c18 = "+";
  const peg$c19 = "*";
  const peg$c20 = "/";
  const peg$c21 = "(";
  const peg$c22 = ")";
  const peg$c23 = "note.";
  const peg$c24 = "velocityDeviation";
  const peg$c25 = "pitch";
  const peg$c26 = "start";
  const peg$c27 = "cos";
  const peg$c28 = "tri";
  const peg$c29 = "saw";
  const peg$c30 = "square";
  const peg$c31 = "noise";
  const peg$c32 = "ramp";
  const peg$c33 = ",";
  const peg$c34 = ":";
  const peg$c35 = "t";
  const peg$c36 = ".";
  const peg$c37 = "//";
  const peg$c38 = "#";
  const peg$c39 = "/*";
  const peg$c40 = "*/";

  const peg$r0 = /^[A-G]/;
  const peg$r1 = /^[1-9]/;
  const peg$r2 = /^[0-9]/;
  const peg$r3 = /^[^\r\n]/;
  const peg$r4 = /^[\r\n]/;
  const peg$r5 = /^[ \t]/;

  const peg$e0 = peg$literalExpectation("-", false);
  const peg$e1 = peg$literalExpectation("C#", false);
  const peg$e2 = peg$literalExpectation("Db", false);
  const peg$e3 = peg$literalExpectation("D#", false);
  const peg$e4 = peg$literalExpectation("Eb", false);
  const peg$e5 = peg$literalExpectation("F#", false);
  const peg$e6 = peg$literalExpectation("Gb", false);
  const peg$e7 = peg$literalExpectation("G#", false);
  const peg$e8 = peg$literalExpectation("Ab", false);
  const peg$e9 = peg$literalExpectation("A#", false);
  const peg$e10 = peg$literalExpectation("Bb", false);
  const peg$e11 = peg$classExpectation([["A", "G"]], false, false, false);
  const peg$e12 = peg$literalExpectation("|", false);
  const peg$e13 = peg$literalExpectation("=", false);
  const peg$e14 = peg$literalExpectation("+=", false);
  const peg$e15 = peg$literalExpectation("velocity", false);
  const peg$e16 = peg$literalExpectation("timing", false);
  const peg$e17 = peg$literalExpectation("duration", false);
  const peg$e18 = peg$literalExpectation("probability", false);
  const peg$e19 = peg$literalExpectation("+", false);
  const peg$e20 = peg$literalExpectation("*", false);
  const peg$e21 = peg$literalExpectation("/", false);
  const peg$e22 = peg$literalExpectation("(", false);
  const peg$e23 = peg$literalExpectation(")", false);
  const peg$e24 = peg$literalExpectation("note.", false);
  const peg$e25 = peg$literalExpectation("velocityDeviation", false);
  const peg$e26 = peg$literalExpectation("pitch", false);
  const peg$e27 = peg$literalExpectation("start", false);
  const peg$e28 = peg$literalExpectation("cos", false);
  const peg$e29 = peg$literalExpectation("tri", false);
  const peg$e30 = peg$literalExpectation("saw", false);
  const peg$e31 = peg$literalExpectation("square", false);
  const peg$e32 = peg$literalExpectation("noise", false);
  const peg$e33 = peg$literalExpectation("ramp", false);
  const peg$e34 = peg$literalExpectation(",", false);
  const peg$e35 = peg$literalExpectation(":", false);
  const peg$e36 = peg$literalExpectation("t", false);
  const peg$e37 = peg$classExpectation([["1", "9"]], false, false, false);
  const peg$e38 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e39 = peg$literalExpectation(".", false);
  const peg$e40 = peg$literalExpectation("//", false);
  const peg$e41 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e42 = peg$literalExpectation("#", false);
  const peg$e43 = peg$literalExpectation("/*", false);
  const peg$e44 = peg$literalExpectation("*/", false);
  const peg$e45 = peg$anyExpectation();
  const peg$e46 = peg$classExpectation(["\r", "\n"], false, false, false);
  const peg$e47 = peg$classExpectation([" ", "\t"], false, false, false);

  function peg$f0(head, tail) {
    const assignments = [head, ...tail.map(t => t[1])].filter(Boolean);
    return assignments;
  }
  function peg$f1(pitchRange, timeRange, parameter, operator, expression) {
    return { pitchRange, timeRange, parameter, operator, expression };
  }
  function peg$f2(startPitch, endPitch) {
    if (endPitch < startPitch) {
      throw new Error(`Invalid pitch range: end pitch ${endPitch} is lower than start pitch ${startPitch}`);
    }
    return { startPitch, endPitch };
  }
  function peg$f3(singlePitch) {
    return { startPitch: singlePitch, endPitch: singlePitch };
  }
  function peg$f4(pitchClass, octave) {
    const pitch = (octave + 2) * 12 + pitchClass.value;
    if (pitch >= 0 && pitch <= 127) {
      return pitch;
    }
    throw new Error(`MIDI pitch ${pitch} (${pitchClass.name}${octave}) outside valid range 0-127`);
  }
  function peg$f5(pc) {
    return { name: pc, value: PITCH_CLASS_VALUES[pc] };
  }
  function peg$f6(startBar, startBeat, endBar, endBeat) {
    return {
      startBar,
      startBeat,
      endBar,
      endBeat
    };
  }
  function peg$f7() {    return "set";  }
  function peg$f8() {    return "add";  }
  function peg$f9() {    return "velocity";  }
  function peg$f10() {    return "timing";  }
  function peg$f11() {    return "duration";  }
  function peg$f12() {    return "probability";  }
  function peg$f13(left, right) {
    return { type: "add", left, right };
  }
  function peg$f14(left, right) {
    return { type: "subtract", left, right };
  }
  function peg$f15(left, right) {
    return { type: "multiply", left, right };
  }
  function peg$f16(left, right) {
    return { type: "divide", left, right };
  }
  function peg$f17(expr) {    return expr;  }
  function peg$f18(name) {
    return { type: "variable", name };
  }
  function peg$f19() {    return "velocityDeviation";  }
  function peg$f20() {    return "velocity";  }
  function peg$f21() {    return "probability";  }
  function peg$f22() {    return "duration";  }
  function peg$f23() {    return "pitch";  }
  function peg$f24() {    return "start";  }
  function peg$f25(name, args) {
    return { type: "function", name, args: args || [] };
  }
  function peg$f26() {    return "cos";  }
  function peg$f27() {    return "tri";  }
  function peg$f28() {    return "saw";  }
  function peg$f29() {    return "square";  }
  function peg$f30() {    return "noise";  }
  function peg$f31() {    return "ramp";  }
  function peg$f32(head, tail) {
    return [head, ...tail.map(t => t[3])];
  }
  function peg$f33(bars, beats) {
    return { type: "period", bars, beats };
  }
  function peg$f34(beats) {
    return { type: "period", bars: 0, beats };
  }
  function peg$f35(wholeNumber, fraction) {
    return wholeNumber + fraction;
  }
  function peg$f36() {
    const [num, den] = text().split('/');
    const result = Number.parseInt(num) / Number.parseInt(den);
    if (result < 1) {
      throw new Error(`Value must be 1 or greater (got ${text()})`);
    }
    return result;
  }
  function peg$f37() {
    return Number.parseFloat(text());
  }
  function peg$f38(wholeNumber, fraction) {
    return wholeNumber + fraction;
  }
  function peg$f39(num, den) {
    const parts = text().split('/');
    const numerator = parts[0] === '' ? 1 : Number.parseInt(parts[0]);
    const denominator = Number.parseInt(parts[1]);
    return numerator / denominator;
  }
  function peg$f40(sign, value) {
    return sign ? -value : value;
  }
  function peg$f41() {
    return Number.parseFloat(text());
  }
  function peg$f42() {
    return Number.parseInt(text());
  }
  function peg$f43() {
    return Number.parseInt(text());
  }
  function peg$f44(sign, value) {
    return sign ? -value : value;
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseassignment();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = [];
    s4 = peg$currPos;
    s5 = [];
    s6 = peg$currPos;
    s7 = peg$parse_();
    s8 = peg$parsenl();
    if (s8 !== peg$FAILED) {
      s9 = peg$parse_();
      s7 = [s7, s8, s9];
      s6 = s7;
    } else {
      peg$currPos = s6;
      s6 = peg$FAILED;
    }
    if (s6 !== peg$FAILED) {
      while (s6 !== peg$FAILED) {
        s5.push(s6);
        s6 = peg$currPos;
        s7 = peg$parse_();
        s8 = peg$parsenl();
        if (s8 !== peg$FAILED) {
          s9 = peg$parse_();
          s7 = [s7, s8, s9];
          s6 = s7;
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
      }
    } else {
      s5 = peg$FAILED;
    }
    if (s5 !== peg$FAILED) {
      s6 = peg$parseassignment();
      if (s6 !== peg$FAILED) {
        s5 = [s5, s6];
        s4 = s5;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
    } else {
      peg$currPos = s4;
      s4 = peg$FAILED;
    }
    while (s4 !== peg$FAILED) {
      s3.push(s4);
      s4 = peg$currPos;
      s5 = [];
      s6 = peg$currPos;
      s7 = peg$parse_();
      s8 = peg$parsenl();
      if (s8 !== peg$FAILED) {
        s9 = peg$parse_();
        s7 = [s7, s8, s9];
        s6 = s7;
      } else {
        peg$currPos = s6;
        s6 = peg$FAILED;
      }
      if (s6 !== peg$FAILED) {
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$currPos;
          s7 = peg$parse_();
          s8 = peg$parsenl();
          if (s8 !== peg$FAILED) {
            s9 = peg$parse_();
            s7 = [s7, s8, s9];
            s6 = s7;
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        }
      } else {
        s5 = peg$FAILED;
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parseassignment();
        if (s6 !== peg$FAILED) {
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
    }
    s4 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s2, s3);

    return s0;
  }

  function peg$parseassignment() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parsepitchRange();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = peg$parse_();
    s3 = peg$parsetimeRange();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    s4 = peg$parse_();
    s5 = peg$parseparameter();
    if (s5 !== peg$FAILED) {
      s6 = peg$parse_();
      s7 = peg$parseoperator();
      if (s7 !== peg$FAILED) {
        s8 = peg$parse_();
        s9 = peg$parseadditive();
        if (s9 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s1, s3, s5, s7, s9);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsepitchRange() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsepitch();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 45) {
        s2 = peg$c0;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsepitch();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s1, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsepitch();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f3(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsepitch() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsepitchClass();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesignedInt();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s1, s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsepitchClass() {
    let s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c2) {
        s1 = peg$c2;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s1 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c3) {
          s1 = peg$c3;
          peg$currPos += 2;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
        if (s1 === peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c4) {
            s1 = peg$c4;
            peg$currPos += 2;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s1 === peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c5) {
              s1 = peg$c5;
              peg$currPos += 2;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e5); }
            }
            if (s1 === peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c6) {
                s1 = peg$c6;
                peg$currPos += 2;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e6); }
              }
              if (s1 === peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c7) {
                  s1 = peg$c7;
                  peg$currPos += 2;
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e7); }
                }
                if (s1 === peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c8) {
                    s1 = peg$c8;
                    peg$currPos += 2;
                  } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e8); }
                  }
                  if (s1 === peg$FAILED) {
                    if (input.substr(peg$currPos, 2) === peg$c9) {
                      s1 = peg$c9;
                      peg$currPos += 2;
                    } else {
                      s1 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e9); }
                    }
                    if (s1 === peg$FAILED) {
                      if (input.substr(peg$currPos, 2) === peg$c10) {
                        s1 = peg$c10;
                        peg$currPos += 2;
                      } else {
                        s1 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e10); }
                      }
                      if (s1 === peg$FAILED) {
                        s1 = input.charAt(peg$currPos);
                        if (peg$r0.test(s1)) {
                          peg$currPos++;
                        } else {
                          s1 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$e11); }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f5(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsetimeRange() {
    let s0, s1, s2, s3, s4, s5, s6, s7;
